log
Wed 20 Mar 2024 05:09:51 PM UTC: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:46:8: error: ‘i’ undeclared (first use in this function)
   46 |    for(i = 1; i <= 10; i++)
      |        ^
exercises.c:46:8: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:49:18: error: expected expression before ‘List’
   49 |         pushBack(List *L, void *dato)
      |                  ^~~~
exercises.c:49:9: error: too few arguments to function ‘pushBack’
   49 |         pushBack(List *L, void *dato)
      |         ^~~~~~~~
In file included from exercises.c:6,
                 from test.c:5:
arraylist.h:20:6: note: declared here
   20 | void pushBack(List *L, void *dato);
      |      ^~~~~~~~
In file included from test.c:5:
exercises.c:49:38: error: expected ‘;’ before ‘}’ token
   49 |         pushBack(List *L, void *dato)
      |                                      ^
      |                                      ;
   50 |      }
      |      ~                                
exercises.c:48:13: error: unused variable ‘dato’ [-Werror=unused-variable]
   48 |        int *dato =(int*)malloc(sizeof(int));
      |             ^~~~
cc1: all warnings being treated as errors
Compilation failed
0979b5b
Wed 20 Mar 2024 05:10:05 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:46:8: error: ‘i’ undeclared (first use in this function)
   46 |    for(i = 1; i <= 10; i++)
      |        ^
exercises.c:46:8: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:49:18: error: expected expression before ‘List’
   49 |         pushBack(List *L, void &dato)
      |                  ^~~~
exercises.c:49:9: error: too few arguments to function ‘pushBack’
   49 |         pushBack(List *L, void &dato)
      |         ^~~~~~~~
In file included from exercises.c:6,
                 from test.c:5:
arraylist.h:20:6: note: declared here
   20 | void pushBack(List *L, void *dato);
      |      ^~~~~~~~
In file included from test.c:5:
exercises.c:49:38: error: expected ‘;’ before ‘}’ token
   49 |         pushBack(List *L, void &dato)
      |                                      ^
      |                                      ;
   50 |      }
      |      ~                                
exercises.c:48:13: error: unused variable ‘dato’ [-Werror=unused-variable]
   48 |        int *dato =(int*)malloc(sizeof(int));
      |             ^~~~
cc1: all warnings being treated as errors
Compilation failed
e71b5dd
Wed 20 Mar 2024 05:10:17 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:46:8: error: ‘i’ undeclared (first use in this function)
   46 |    for(i = 1; i <= 10; i++)
      |        ^
exercises.c:46:8: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:49:18: error: expected expression before ‘List’
   49 |         pushBack(List *L, void dato)
      |                  ^~~~
exercises.c:49:9: error: too few arguments to function ‘pushBack’
   49 |         pushBack(List *L, void dato)
      |         ^~~~~~~~
In file included from exercises.c:6,
                 from test.c:5:
arraylist.h:20:6: note: declared here
   20 | void pushBack(List *L, void *dato);
      |      ^~~~~~~~
In file included from test.c:5:
exercises.c:49:37: error: expected ‘;’ before ‘}’ token
   49 |         pushBack(List *L, void dato)
      |                                     ^
      |                                     ;
   50 |      }
      |      ~                               
exercises.c:48:13: error: unused variable ‘dato’ [-Werror=unused-variable]
   48 |        int *dato =(int*)malloc(sizeof(int));
      |             ^~~~
cc1: all warnings being treated as errors
Compilation failed
ae97c6f
Wed 20 Mar 2024 05:11:30 PM UTC: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  1|4
total_score: 10/70
9e6894a
Wed 20 Mar 2024 05:14:29 PM UTC: 
 exercises.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  1|4
total_score: 10/70
c5f7728
Wed 20 Mar 2024 05:18:56 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
9b707e2
Wed 20 Mar 2024 05:24:48 PM UTC: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:83:13: error: comparison between pointer and integer [-Werror]
   83 |     if(dato == elem){
      |             ^~
cc1: all warnings being treated as errors
Compilation failed
ad251c6
Wed 20 Mar 2024 05:25:17 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
fffa7ec
Thu 21 Mar 2024 06:28:49 PM UTC: 
 exercises.c | 35 +++++++++++++++++++++++++++++++++++
 1 file changed, 35 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:99:9: error: unused variable ‘dato’ [-Werror=unused-variable]
   99 |   void* dato;
      |         ^~~~
exercises.c:98:10: error: unused variable ‘P3’ [-Werror=unused-variable]
   98 |   Stack* P3 = create_stack();
      |          ^~
cc1: all warnings being treated as errors
Compilation failed
a1459f4
Thu 21 Mar 2024 06:28:56 PM UTC: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  4|2
total_score: 40/70
8149249
